--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Harshit Garg · Portfolio</title>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="alternate icon" href="favicon.ico" />
+  <link rel="apple-touch-icon" href="favicon.svg" />
   <style>
     :root {
       --bg: #050816;
@@ -37,6 +40,7 @@
       -webkit-font-smoothing: antialiased;
       overflow-x: hidden;
       position: relative;
+      -webkit-tap-highlight-color: rgba(255, 75, 139, 0.2);
     }
 
     /* Animated gradient background */
@@ -153,6 +157,10 @@
       border: 1px solid transparent;
       transition: all var(--transition-fast);
       white-space: nowrap;
+      min-height: 44px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
     }
 
     nav a:hover {
@@ -274,6 +282,8 @@
       text-decoration: none;
       transition: all var(--transition-fast);
       white-space: nowrap;
+      min-height: 44px;
+      touch-action: manipulation;
     }
 
     .btn-primary {
@@ -996,7 +1006,12 @@
       outline: none;
       transition: border-color var(--transition-fast), box-shadow var(--transition-fast), background 160ms ease;
       resize: vertical;
-      min-height: 0;
+      -webkit-appearance: none;
+      appearance: none;
+    }
+
+    input {
+      min-height: 44px;
     }
 
     input:focus,
@@ -1457,19 +1472,55 @@
 
     /* Responsive */
     @media (max-width: 900px) {
+      .page-shell {
+        padding: 1.25rem 1rem 3rem;
+      }
+
       header {
         flex-wrap: wrap;
         border-radius: 22px;
+        padding: 0.65rem 1rem;
+        gap: 0.75rem;
+      }
+
+      .brand {
+        gap: 0.6rem;
+      }
+
+      .brand-mark {
+        width: 32px;
+        height: 32px;
+      }
+
+      .brand-text-title {
+        font-size: 0.8rem;
+      }
+
+      .brand-text-name {
+        font-size: 1rem;
       }
 
       nav {
         width: 100%;
-        justify-content: flex-end;
+        justify-content: flex-start;
         flex-wrap: wrap;
+        gap: 0.4rem;
+        font-size: 0.78rem;
+      }
+
+      nav a {
+        padding: 0.35rem 0.7rem;
+        font-size: 0.78rem;
+      }
+
+      .nav-cta {
+        padding: 0.45rem 0.9rem;
+        font-size: 0.75rem;
       }
 
       .hero {
         grid-template-columns: minmax(0, 1fr);
+        gap: 1.5rem;
       }
 
       .hero-right {
@@ -1478,12 +1529,43 @@
 
       .hero-card {
         margin-bottom: 0.7rem;
+        padding: 1.2rem 1.2rem 1.3rem;
+      }
+
+      .hero-title {
+        font-size: clamp(1.8rem, 5vw + 1rem, 2.5rem);
+        margin-bottom: 0.6rem;
+      }
+
+      .hero-subtitle {
+        font-size: 0.95rem;
+        margin-bottom: 1.4rem;
+      }
+
+      .hero-actions {
+        gap: 0.7rem;
+        margin-bottom: 1.4rem;
+      }
+
+      .hero-meta-strip {
+        gap: 0.6rem;
+        font-size: 0.74rem;
+      }
+
+      .hero-meta-pill {
+        padding: 0.3rem 0.7rem;
+        font-size: 0.74rem;
       }
 
       .about-layout,
       .experience-layout,
       .testimonials-grid,
       .contact-layout {
+        grid-template-columns: minmax(0, 1fr);
+        gap: 1.3rem;
+      }
+
+      .skills-grid {
         grid-template-columns: minmax(0, 1fr);
       }
 
@@ -1498,41 +1580,525 @@
       .section-caption {
         max-width: none;
         text-align: left;
+        font-size: 0.75rem;
+      }
+
+      .section-header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.8rem;
+      }
+
+      .section-kicker {
+        font-size: 1.05rem;
+      }
+
+      .metrics-grid {
+        grid-template-columns: minmax(0, 1fr);
       }
     }
 
     @media (max-width: 720px) {
       .page-shell {
-        padding-inline: 1rem;
+        padding: 1rem 0.85rem 2.5rem;
       }
 
       header {
-        padding-inline: 0.85rem;
+        padding: 0.6rem 0.85rem;
+        top: 0.5rem;
+        margin-bottom: 1.25rem;
+      }
+
+      .brand-text-title {
+        font-size: 0.75rem;
+      }
+
+      .brand-text-name {
+        font-size: 0.95rem;
+      }
+
+      nav {
+        font-size: 0.75rem;
+      }
+
+      nav a {
+        padding: 0.3rem 0.6rem;
+        font-size: 0.75rem;
+      }
+
+      .nav-cta {
+        padding: 0.4rem 0.8rem;
+        font-size: 0.72rem;
+      }
+
+      .hero-title {
+        font-size: clamp(1.6rem, 6vw + 0.8rem, 2.2rem);
+      }
+
+      .hero-subtitle {
+        font-size: 0.9rem;
       }
 
       .projects-grid {
         grid-template-columns: minmax(0, 1fr);
+        gap: 0.8rem;
+      }
+
+      .project-card {
+        padding: 0.85rem 0.85rem 0.95rem;
+      }
+
+      .project-title {
+        font-size: 0.9rem;
+      }
+
+      .project-desc {
+        font-size: 0.8rem;
       }
 
       footer {
         flex-direction: column;
         align-items: flex-start;
+        gap: 0.5rem;
+        padding: 1rem 0.85rem 2rem;
+        font-size: 0.7rem;
       }
 
       .hero-card {
-        padding: 1.1rem 1.1rem 1.2rem;
+        padding: 1rem 1rem 1.1rem;
+      }
+
+      .hero-avatar-ring {
+        width: 70px;
+        height: 70px;
+      }
+
+      .hero-avatar-initials {
+        font-size: 1.4rem;
+      }
+
+      .hero-roles {
+        font-size: 0.75rem;
+      }
+
+      .hero-metric-value {
+        font-size: 0.85rem;
+      }
+
+      section {
+        padding: 1.2rem 1.2rem 1.3rem;
+      }
+
+      .about-text {
+        font-size: 0.85rem;
+      }
+
+      .skill-pill {
+        padding: 0.5rem 0.65rem;
+        font-size: 0.75rem;
+      }
+
+      .timeline {
+        padding-left: 0.9rem;
+      }
+
+      .timeline-item::before {
+        left: -1.35rem;
+      }
+
+      .timeline-role {
+        font-size: 0.9rem;
+      }
+
+      .timeline-body {
+        font-size: 0.8rem;
+      }
+
+      .testimonial-card {
+        padding: 0.8rem 0.85rem 0.9rem;
+      }
+
+      .testimonial-quote {
+        font-size: 0.8rem;
+      }
+
+      .achievement-card {
+        padding: 1rem 1rem 1.1rem;
+      }
+
+      .achievement-title {
+        font-size: 0.88rem;
+      }
+
+      .achievement-desc {
+        font-size: 0.78rem;
+      }
+
+      .contact-layout {
+        font-size: 0.82rem;
+      }
+
+      input,
+      textarea {
+        padding: 0.5rem 0.7rem;
+        font-size: 0.82rem;
+      }
+
+      textarea {
+        min-height: 100px;
+      }
+
+      .contact-pill {
+        font-size: 0.72rem;
+        padding: 0.18rem 0.55rem;
       }
     }
 
     @media (max-width: 480px) {
+      .page-shell {
+        padding: 0.9rem 0.75rem 2rem;
+      }
+
+      header {
+        padding: 0.55rem 0.75rem;
+        border-radius: 18px;
+      }
+
+      .brand-mark {
+        width: 28px;
+        height: 28px;
+      }
+
+      .brand-mark-inner {
+        font-size: 0.95rem;
+      }
+
+      .brand-text-title {
+        font-size: 0.7rem;
+        letter-spacing: 0.2em;
+      }
+
+      .brand-text-name {
+        font-size: 0.9rem;
+      }
+
+      nav {
+        gap: 0.3rem;
+        font-size: 0.72rem;
+      }
+
+      nav a {
+        padding: 0.28rem 0.55rem;
+        font-size: 0.72rem;
+      }
+
+      .nav-cta {
+        padding: 0.35rem 0.7rem;
+        font-size: 0.7rem;
+        width: 100%;
+        text-align: center;
+        margin-top: 0.3rem;
+      }
+
+      .hero-title {
+        font-size: clamp(1.5rem, 7vw + 0.5rem, 2rem);
+        line-height: 1.1;
+      }
+
+      .hero-subtitle {
+        font-size: 0.85rem;
+        margin-bottom: 1.2rem;
+      }
+
       .hero-actions {
         flex-direction: column;
         align-items: stretch;
+        gap: 0.6rem;
+        margin-bottom: 1.2rem;
       }
 
       .btn-primary,
       .btn-ghost {
         justify-content: center;
+        padding: 0.6rem 1rem;
+        font-size: 0.85rem;
+        width: 100%;
+      }
+
+      .hero-meta-strip {
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+
+      .hero-meta-pill {
+        width: 100%;
+        justify-content: flex-start;
+        padding: 0.4rem 0.7rem;
+      }
+
+      .hero-card {
+        padding: 0.9rem 0.9rem 1rem;
+      }
+
+      .hero-card-header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.5rem;
+      }
+
+      .hero-grid {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+      }
+
+      .hero-avatar-ring {
+        width: 60px;
+        height: 60px;
+        margin: 0 auto;
+      }
+
+      .hero-avatar-initials {
+        font-size: 1.2rem;
+      }
+
+      .hero-roles {
+        text-align: center;
+        font-size: 0.72rem;
+      }
+
+      .hero-metrics {
+        grid-template-columns: 1fr;
+      }
+
+      .hero-metric-card {
+        padding: 0.5rem 0.65rem;
+      }
+
+      .hero-metric-value {
+        font-size: 0.8rem;
+      }
+
+      .hero-floating-tag {
+        position: static;
+        margin-top: 0.8rem;
+        width: 100%;
+        justify-content: center;
+        font-size: 0.65rem;
+      }
+
+      section {
+        padding: 1rem 1rem 1.1rem;
+        border-radius: 20px;
+      }
+
+      .section-title {
+        font-size: 0.85rem;
+      }
+
+      .section-kicker {
+        font-size: 1rem;
+      }
+
+      .section-caption {
+        font-size: 0.72rem;
+      }
+
+      .about-text p {
+        font-size: 0.82rem;
+        margin-bottom: 0.6rem;
+      }
+
+      .tag-chip {
+        font-size: 0.7rem;
+        padding: 0.22rem 0.55rem;
+      }
+
+      .skill-pill {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.4rem;
+        padding: 0.5rem 0.6rem;
+      }
+
+      .skill-label {
+        font-size: 0.8rem;
+      }
+
+      .skill-level {
+        font-size: 0.68rem;
+      }
+
+      .project-card {
+        padding: 0.8rem 0.8rem 0.9rem;
+      }
+
+      .project-title {
+        font-size: 0.88rem;
+      }
+
+      .project-desc {
+        font-size: 0.78rem;
+      }
+
+      .project-meta {
+        gap: 0.25rem;
+      }
+
+      .project-meta span {
+        font-size: 0.68rem;
+        padding: 0.15rem 0.45rem;
+      }
+
+      .timeline-heading {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.3rem;
+      }
+
+      .timeline-date {
+        font-size: 0.7rem;
+      }
+
+      .metric-card {
+        padding: 0.7rem 0.8rem;
+      }
+
+      .metric-value {
+        font-size: 0.95rem;
+      }
+
+      .metric-label,
+      .metric-footnote {
+        font-size: 0.72rem;
+      }
+
+      .testimonial-card {
+        padding: 0.75rem 0.8rem 0.85rem;
+      }
+
+      .testimonial-quote {
+        font-size: 0.78rem;
+      }
+
+      .testimonial-author {
+        font-size: 0.78rem;
+      }
+
+      .testimonial-meta {
+        font-size: 0.7rem;
+      }
+
+      .achievement-stat-card {
+        padding: 0.9rem;
+      }
+
+      .achievement-stat-value {
+        font-size: 1.5rem;
+      }
+
+      .achievement-stat-label {
+        font-size: 0.7rem;
+      }
+
+      .achievement-card {
+        padding: 0.9rem 0.9rem 1rem;
+      }
+
+      .achievement-icon {
+        width: 36px;
+        height: 36px;
+        font-size: 1.1rem;
+      }
+
+      .achievement-title {
+        font-size: 0.85rem;
+      }
+
+      .achievement-role {
+        font-size: 0.72rem;
+      }
+
+      .achievement-desc {
+        font-size: 0.75rem;
+      }
+
+      .achievement-badge {
+        font-size: 0.65rem;
+        padding: 0.18rem 0.55rem;
+      }
+
+      form {
+        gap: 0.6rem;
+      }
+
+      label {
+        font-size: 0.78rem;
+      }
+
+      input,
+      textarea {
+        padding: 0.5rem 0.65rem;
+        font-size: 0.8rem;
+        border-radius: 12px;
+      }
+
+      textarea {
+        min-height: 90px;
+      }
+
+      .contact-label {
+        font-size: 0.78rem;
+      }
+
+      .contact-value {
+        font-size: 0.78rem;
+      }
+
+      .contact-pill {
+        font-size: 0.7rem;
+        padding: 0.15rem 0.5rem;
+      }
+
+      .contact-pill-list {
+        gap: 0.35rem;
+      }
+
+      footer {
+        padding: 0.9rem 0.75rem 1.8rem;
+        font-size: 0.68rem;
+      }
+
+      .hero-copy-subtle-pill {
+        font-size: 0.68rem;
+        padding: 0.22rem 0.55rem 0.22rem 0.22rem;
+      }
+
+      .ping-dot {
+        width: 16px;
+        height: 16px;
+      }
+
+      .ping-core {
+        width: 6px;
+        height: 6px;
+      }
+    }
+
+    @media (max-width: 360px) {
+      .page-shell {
+        padding: 0.8rem 0.65rem 1.8rem;
+      }
+
+      .hero-title {
+        font-size: 1.4rem;
+      }
+
+      .hero-subtitle {
+        font-size: 0.8rem;
+      }
+
+      .section-kicker {
+        font-size: 0.95rem;
       }
     }
   </style>
