added that I am seeking full-time Software Engineer opportunities

--- a/index.html
+++ b/index.html
@@ -2369,7 +2369,7 @@
         <a href="#achievements">Achievements</a>
         <a href="#accolades">Accolades</a>
         <a href="#contact">Contact</a>
-        <a href="#contact" class="nav-cta">Let&apos;s build something</a>
+        <a href="#contact" class="nav-cta">Let&apos;s connect</a>
       </nav>
     </header>
 
@@ -2379,7 +2379,7 @@
         <div class="hero-left">
           <div class="hero-copy-subtle-pill">
             <span class="ping-dot"><span class="ping-core"></span></span>
-            <span>Now accepting select collaborations for 2026</span>
+            <span>Seeking full-time Software Engineer opportunities</span>
           </div>
 
           <h1 class="hero-title">
@@ -2393,7 +2393,7 @@
           </p>
 
           <div class="hero-actions">
-            <a href="#contact" class="btn-primary">Book a strategy call →</a>
+            <a href="#contact" class="btn-primary">Let&apos;s connect →</a>
             <a href="#projects" class="btn-ghost">Browse signature projects</a>
           </div>
 
@@ -2416,7 +2416,7 @@
       <span class="hero-card-tag">live dashboard · v1.0</span>
       <span class="hero-card-badge">
         <span style="width: 7px; height: 7px; border-radius: 999px; background: #22c55e;"></span>
-        Available for select projects
+        Open to full-time SWE roles
       </span>
     </div>
 
@@ -2450,8 +2450,8 @@
           </div>
 
           <div class="hero-metric-card">
-            <div class="hero-metric-label">Collab modes</div>
-            <div class="hero-metric-value">Advisory · Build · Co-found</div>
+            <div class="hero-metric-label">Seeking</div>
+            <div class="hero-metric-value">Full-time SWE · Product roles</div>
           </div>
         </div>
       </div>
@@ -2502,6 +2502,9 @@
               <span class="tag-chip">High-trust community design</span>
               <span class="tag-chip">Education &amp; career mobility</span>
             </div>
+            <p style="margin-top: 1rem; font-size: 0.85rem; color: var(--muted);">
+              <strong style="color: #e5e7eb;">Currently seeking:</strong> Full-time Software Engineer positions where I can apply my full-stack expertise, product thinking, and passion for building systems that scale.
+            </p>
           </div>
 
           <div>
@@ -3194,10 +3197,10 @@
         <div class="section-header">
           <div>
             <div class="section-title">contact</div>
-            <div class="section-kicker">Let&apos;s build the thing you can&apos;t stop thinking about.</div>
+            <div class="section-kicker">Open to full-time Software Engineer opportunities.</div>
           </div>
           <div class="section-caption">
-            Ideal fits: ambitious founders, thoughtful teams, and problems where UX, infra, and incentives all matter at once.
+            Seeking roles where I can build impactful products, solve complex technical challenges, and contribute to teams that value both engineering excellence and product thinking.
           </div>
         </div>
         <div class="contact-layout">
@@ -3212,8 +3215,8 @@
                 <input id="email" name="email" type="email" placeholder="Where can I reply?" required />
               </div>
               <div class="field-group">
-                <label for="project">What are you building?</label>
-                <textarea id="project" name="project" placeholder="Give me the messy version. Links welcome." required></textarea>
+                <label for="project">Opportunity details</label>
+                <textarea id="project" name="project" placeholder="Tell me about the role, team, or opportunity. I&apos;d love to learn more!" required></textarea>
               </div>
               <button type="submit" class="pageclip-form_submit btn-primary" style="margin-top: 0.45rem; width: fit-content;">
                 <span>Send message (no spam, ever)</span>
@@ -3223,7 +3226,7 @@
           <div class="contact-meta">
             <div>
               <div class="contact-label">Direct lines</div>
-              <div class="contact-value">Prefer email for new intros; we&apos;ll move to video or async docs as needed.</div>
+              <div class="contact-value">Open to discussing full-time opportunities. Feel free to reach out via email or schedule a call.</div>
               <div class="contact-pill-list" style="margin-top: 0.4rem;">
                 <span class="contact-pill">Email: garg.archie@gmail.com</span>
                 <span class="contact-pill">Alt: hgarg1@umd.edu</span>
@@ -3231,19 +3234,20 @@
               </div>
             </div>
             <div>
-              <div class="contact-label">Collaboration modes</div>
+              <div class="contact-label">Open to</div>
               <div class="contact-pill-list">
-                <span class="contact-pill">Founding engineer / CTO-level</span>
-                <span class="contact-pill">Product &amp; architecture advisory</span>
-                <span class="contact-pill">Time-boxed design sprints</span>
+                <span class="contact-pill">Full-time Software Engineer roles</span>
+                <span class="contact-pill">Full-stack &amp; backend positions</span>
+                <span class="contact-pill">Product-focused engineering teams</span>
+                <span class="contact-pill">Early-stage to enterprise companies</span>
               </div>
             </div>
             <div>
-              <div class="contact-label">Not a fit (for now)</div>
+              <div class="contact-label">Location preferences</div>
               <div class="contact-pill-list">
-                <span class="contact-pill">Pure "build this Figma" contracts</span>
-                <span class="contact-pill">No-ownership quick hacks</span>
-                <span class="contact-pill">Things that don&apos;t respect users</span>
+                <span class="contact-pill">Remote · Hybrid · On-site</span>
+                <span class="contact-pill">Based in Gaithersburg, MD</span>
+                <span class="contact-pill">Open to relocation</span>
               </div>
             </div>
           </div>
