--- a/index.html
+++ b/index.html
@@ -2773,6 +2773,25 @@
             </div>
           </article>
 
+          <a href="https://api.dream-x.app" target="_blank" rel="noopener noreferrer"
+            style="text-decoration: none; color: inherit;">
+            <article class="project-card">
+              <div class="project-title-row">
+                <div class="project-title">ReverseRec</div>
+                <div class="project-pill">AI · Recommendations</div>
+              </div>
+              <p class="project-desc">
+                ReverseRec is a full-stack, diversity-aware recommendation platform that analyzes user content patterns and expands exposure beyond
+                algorithmic echo chambers. Hybrid Node.js + Python services deliver real-time personalization powered by custom-trained models and structured data pipelines.
+              </p>
+              <div class="project-meta">
+                <span>Admin-governed API keys &amp; analytics dashboard</span>
+                <span>Automated email workflows &amp; dataset uploads</span>
+                <span>Explainable diversity scoring &amp; adaptive retraining</span>
+              </div>
+            </article>
+          </a>
+
           <article class="project-card">
             <div class="project-title-row">
               <div class="project-title">Experiential OS</div>
