--- a/index.html
+++ b/index.html
@@ -2595,12 +2595,25 @@
                 <div class="skill-pill">
                   <div>
                     <div class="skill-label">Languages &amp; Frameworks</div>
-                    <div class="skill-level">Python · Java · C/C#/C++ · ASP.NET · Flutter</div>
+                    <div class="skill-level">Python · Java · Node.js · React · C/C#/C++ · ASP.NET · Flutter</div>
                   </div>
                   <span>Advanced</span>
                 </div>
                 <div class="skill-bar-track">
                   <div class="skill-bar-fill" style="width: 95%; animation-delay: 0.1s;"></div>
+                </div>
+              </div>
+
+              <div>
+                <div class="skill-pill">
+                  <div>
+                    <div class="skill-label">Full-Stack Architecture</div>
+                    <div class="skill-level">Node.js + React · Node.js + Python · Hybrid architectures</div>
+                  </div>
+                  <span>Expert</span>
+                </div>
+                <div class="skill-bar-track">
+                  <div class="skill-bar-fill" style="width: 96%; animation-delay: 0.5s;"></div>
                 </div>
               </div>
 
